[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/UserOI.gd" type="Script" id=1]
[ext_resource path="res://Graphics/Fonts/IBMPlexSans-Bold.ttf" type="DynamicFontData" id=2]

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFont" id=2]
size = 80
extra_spacing_bottom = -40
font_data = ExtResource( 2 )

[node name="UserOI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 8.0
color = Color( 1, 1, 0.27451, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -104.0
margin_top = -312.0
margin_right = 104.0
margin_bottom = -168.0
alignment = 1

[node name="Start" type="Button" parent="VBoxContainer"]
margin_top = 26.0
margin_right = 208.0
margin_bottom = 46.0
text = "start"

[node name="FvsS" type="Button" parent="VBoxContainer"]
margin_top = 50.0
margin_right = 208.0
margin_bottom = 70.0
text = "Food vs Snake"

[node name="Create" type="Button" parent="VBoxContainer"]
margin_top = 74.0
margin_right = 208.0
margin_bottom = 94.0
text = "create"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 98.0
margin_right = 208.0
margin_bottom = 118.0
text = "Quit"

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -138.0
margin_top = -136.0
margin_right = 196.0
margin_bottom = 129.0
theme = SubResource( 1 )
custom_colors/font_color = Color( 0.180392, 0.117647, 0.117647, 1 )
custom_fonts/font = SubResource( 2 )
text = "SNAKE
 GAME"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/FvsS" to="." method="_on_FvsS_pressed"]
[connection signal="pressed" from="VBoxContainer/Create" to="." method="_on_Create_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
